fixed minor changes and it is ready to deploy

--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 
   <!-- home section (right panel) -->
   <section class="home" id="home">
-    <h3>HI  THERE !</h3>
+    <h3>HELLO!!</h3>
     <h1>I Am <span>Abhijit Pati</span></h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Maiores sunt quas eaque rerum distinctio dolorem reprehenderit!
-      ipsum dolor sit amet consectetur
+    <p>
+      I am from Kolkata and completed my schooling from Odisha, currently in my 3rd year of engineering with Electronics and Communication major from 
+      Techno India University. I am a passionate frontend developer continuing to learn by creating various projects.
+      Always ready to learn something new, apart from this i like to play cricket and badminton
+      in my free time
     </p>
     <a href="#about">
       <button class="btn">About Me <i class="fas fa-user"></i> </button>
@@ -111,7 +113,7 @@
       </div>
       <div class="box">
         <i class="fas fa-graduation-cap"></i>
-        <span>Btech  2020-2024</span>
+        <span>Btech ECE 2020-2024</span>
         <h3>Techno India University, Kolkata, West Bengal</h3>
         <p>8.4 CGPA till 4th Semester</p>
       </div>
@@ -197,8 +199,8 @@
         <div class="info">
           <h3><i class="fas fa-envelope"></i> abhijitpatiofficial@gmail.com </h3>
           <h3><i class="fas fa-phone"></i> +91-8455879486 </h3>
-          <h3><i class="fas fa-phone"></i> <a href="https://www.linkedin.com/in/abhijit-pati-1b4baa1b6/" target="_blank">Linked In</a> </h3>
-          <h3><i class="fas fa-phone"></i> <a href="https://github.com/abhijitpati11" target="_blank">GitHub</a></h3>
+          <h3><i class=" fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/abhijit-pati-1b4baa1b6/" target="_blank">Linked In</a> </h3>
+          <h3><i class=" fa-brands fa-github"></i> <a href="https://github.com/abhijitpati11" target="_blank">GitHub</a></h3>
           <h3><i class="fas fa-map-marker-alt"></i> Kolkata, West Bengal </h3>
         </div>
       </div>
